Adopt Stream.toList() now that we're on Java 17